kubernetes/ghost-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ghost
  labels:
    app: test-ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-ghost
  template:
    metadata:
      labels:
        app: test-ghost
    spec:
      containers:
      - name: test-ghost
        image: jetalone/test-ghost:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
