kubernetes/ghost-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-ghost
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: test-ghost
  type: LoadBalancer
