kubernetes/ghost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: test-ghost
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: test-ghost
          servicePort: 3000
